<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.cocos.module_asset.create.CreateAccountViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/arrow_left_black"
                android:paddingStart="@dimen/dp_11"
                android:paddingEnd="@dimen/dp_20"
                binding:onClickCommand="@{viewModel.backOnClickCommand}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/create_account_title"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_18"
                android:typeface="@{@string/TOTAL_ASSET}" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_90"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/shape_backup_wallet_tips_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            binding:onClickCommand="@{viewModel.importWalletOnClickCommand}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/module_login_import_wallet"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/module_login_import_wallet_detail"
                android:textColor="@color/color_A5A9B1"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_90"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/shape_backup_wallet_tips_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            binding:onClickCommand="@{viewModel.createWalletOnClickCommand}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/module_login_create_wallet"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:paddingLeft="@dimen/dp_15"
                android:text="@string/module_login_create_wallet_detail"
                android:textColor="@color/color_A5A9B1"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>
    </LinearLayout>
</layout>