<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <import type="com.cocos.module_asset.nh_order_manager.CancelOrderConfirmViewModel" />

        <variable
            name="viewModel"
            type="com.cocos.module_asset.nh_order_manager.CancelOrderConfirmViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_22">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerVertical="true"
                android:src="@drawable/close_icon"
                binding:onClickCommand="@{viewModel.dismissOnClickCommand}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/module_asset_transfer_deal_detail"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center_vertical"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/module_asset_transfer_order_info"
                android:textColor="@color/color_A5A9B1"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.8"
                android:text="@string/cancel_mine_nh_order_text"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_E8EBF1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center_vertical"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/module_asset_nh_order_detail_order_id"
                android:textColor="@color/color_A5A9B1"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.8"
                android:text="@={viewModel.orderId}"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_E8EBF1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center_vertical"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/module_asset_nh_asset_id"
                android:textColor="@color/color_A5A9B1"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.8"
                android:text="@={viewModel.nhAssetId}"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_E8EBF1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center_vertical"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/module_asset_transfer_fee_info"
                android:textColor="@color/color_A5A9B1"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.8"
                android:text="@={viewModel.minerFee}"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_E8EBF1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/shape_create_wallet_bg"
            android:gravity="center"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:text="@string/module_asset_cancel_order_confirm_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            binding:onClickCommand="@{viewModel.cancelConfirmOnClickCommand}" />
    </LinearLayout>
</layout>