<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:br="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.cocos.module_asset.ui.transfer.TransferViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/arrow_left_black"
                android:paddingStart="@dimen/dp_11"
                android:paddingEnd="@dimen/dp_20"
                binding:onClickCommand="@{viewModel.backOnClickCommand}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/module_asset_transfer_title"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_18"
                android:typeface="@{@string/TOTAL_ASSET}" />

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_13"
                android:src="@drawable/transfer_scan_icon"
                binding:onClickCommand="@{viewModel.scanOnClickCommand}" />
        </RelativeLayout>

        <com.cocos.library_base.widget.LinearRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_88"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_24"
            br:borderColor="@color/color_D8DBE1"
            br:borderStrokeWidth="6"
            br:needLeftAndRigtBorder="false"
            br:needTopBorder="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_asset_receivable_account"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/transfer_contact"
                binding:onClickCommand="@{viewModel.contactOnClickCommand}" />

            <EditText
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:hint="@string/module_asset_receivables"
                android:inputType="text"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_12"
                android:text="@={viewModel.receivablesAccountName}" />

        </com.cocos.library_base.widget.LinearRelativeLayout>


        <com.cocos.library_base.widget.LinearRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_88"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_26"
            br:borderColor="@color/color_D8DBE1"
            br:borderStrokeWidth="6"
            br:needLeftAndRigtBorder="false"
            br:needTopBorder="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_asset_transfer_count"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_15" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.accountBalance}"
                    android:textColor="@color/color_A5A9B1"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_3"
                    android:paddingBottom="@dimen/dp_6"
                    android:text="@{viewModel.symbolType}"
                    android:textColor="@color/color_A5A9B1"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_amount"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:hint="@string/module_asset_transfer_amount"
                android:inputType="numberDecimal"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_12"
                android:text="@={viewModel.transferAmount}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/dp_12"
                android:background="@drawable/fragment_asset_gradient_button_bg"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_7"
                android:paddingTop="@dimen/dp_2"
                android:paddingRight="@dimen/dp_7"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/module_asset_transfer_all"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_12"
                binding:onClickCommand="@{viewModel.transferAllOnClickCommand}" />

        </com.cocos.library_base.widget.LinearRelativeLayout>


        <com.cocos.library_base.widget.LinearRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_88"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_26"
            br:borderColor="@color/color_D8DBE1"
            br:borderStrokeWidth="6"
            br:needLeftAndRigtBorder="false"
            br:needTopBorder="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_asset_transfer_memo"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_15" />


            <EditText
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:hint="@string/module_asset_transfer_memo_hint"
                android:inputType="text"
                android:maxLength="12"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_12"
                android:text="@={viewModel.transferMemo}" />

        </com.cocos.library_base.widget.LinearRelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_66"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/shape_create_wallet_bg"
                android:gravity="center"
                android:text="@string/module_asset_transfer_next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                binding:onClickCommand="@{viewModel.transferNextOnClickCommand}" />

        </LinearLayout>
    </LinearLayout>
</layout>